<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/enter_the_email"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:textSize="20dp"
        android:hint="@string/enter_the_password"
        android:gravity="center"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp"/>


    <EditText
        android:id="@+id/conformpass"
        android:layout_width="393dp"
        android:layout_height="59dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:hint="@string/reenter_your_password"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_below="@+id/conformpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="138dp"
        android:onClick="login"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="146dp"
        android:onClick="nxtlogin"
        android:text="@string/login"
        android:textSize="20dp" />

</RelativeLayout>