<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingTop="50dp" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email1"
        android:layout_marginTop="59dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="132dp"
        android:onClick="loginup"
        android:text="@string/login"
        android:textSize="25dp" />


</RelativeLayout>